[package]
name = "opaquebind"
version = "0.3.5"
edition = "2021"
authors = ["Tip ten Brink <75669206+tiptenbrink@users.noreply.github.com>"]
license = "Apache-2.0"
keywords = ["opaque", "passwords", "authentication", "serialization"]
readme = "README.md"
repository = "https://github.com/tiptenbrink/opaquebind/tree/main/opaquebind"
description = "Simple interface to opaque-ke and core library for Python and WASM bindings."

[lib]
name = "opaquebind"

[dependencies]
opaque-ke = { version = "2.0.0", features = ["argon2"] }
sha2 = "0.10.8"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
base64 = "0.21.4"
argon2 = "0.4.1"