[package]
name = "opaquebind_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "opaquebind_core"

[dependencies]
opaque-ke = { version = "1.2.0", features = ["slow-hash"] }
curve25519-dalek = { version = "3", default-features = false }
sha2 = "0.9"
scrypt = { version = "0.5", default-features = false }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
digest = "0.9"
base64 = "0.13.0"
argon2 = "0.3"