[package]
name = "opaquepy"
version = "0.3.4"
edition = "2021"

[package.metadata.maturin]
python-source = "python"
name = "opaquepy._opaquepy"

[lib]
name = "opaquepy"
crate-type = ["cdylib"]

[dependencies]
opaquebind = { path = "../opaquebind" }

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module"]