[project]
name = "opaquepy"
version = "0.4.0"
description = "Python bindings for opaque-ke."
readme = "README.md"
requires-python = ">=3.9, <3.13"
license = {text = "Apache-2.0"}
authors = [
    {email = "75669206+tiptenbrink@users.noreply.github.com"},
    {name = "Tip ten Brink"}
]

[tool.maturin]
python-source = "python"

[tool.poetry]
name = "opaquepy"
version = "0.4.0"
description = "Python bindings for opaque-ke."
authors = ["Tip ten Brink <75669206+tiptenbrink@users.noreply.github.com>"]
license = "Apache-2"
packages = [
    { include = "opaquepy", from = "python" },
]


[tool.poetry.dependencies]
python = ">= 3.9, <3.13"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
mypy = "^1.5.1"
black = "^23.9.1"

[tool.mypy]
python_version = "3.9"
strict = true
files = ["python"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend ="maturin"
