[project]
name = "opaquepy"
version = "0.6.0"
description = "Python bindings for opaque-ke."
readme = "README.md"
requires-python = ">=3.9, <3.14"
license = {text = "Apache-2.0"}
authors = [
    {email = "75669206+tiptenbrink@users.noreply.github.com"},
    {name = "Tip ten Brink"}
]

[tool.maturin]
python-source = "python"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "mypy==1.14.1",
    "black==24.10.0"
]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["python"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend ="maturin"
