[package]
name = "opaquewasm"
version = "0.3.7"
authors = ["tiptenbrink <75669206+tiptenbrink@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
opaque-borink = { path = "../opaque-borink" }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

#[profile.release]
## Tell `rustc` to optimize for small code size.
#opt-level = "s"
